added minified version

--- a/demo.html
+++ b/demo.html
@@ -56,7 +56,7 @@ Demo for Buto lightbox js which is a lightbox based integration of the buto plat
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script> <!-- make sure you have jquery loaded before you load the buto plugin-->
         
         <!-- required -->
-        <script src="js/buto-lightbox.js" ></script> 
+        <script src="js/buto-lightbox.min.js" ></script> 
         <!-- required -->
         
         <script>
