--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@ Demo for Buto lightbox js which is a lightbox based integration of the buto plat
         <div class='content'>
 
             <div id='content' class="center clearfix">
-                <h1>Buto Lightbox Embed Demo</h1>
-                <p><a href='http://get.buto.tv'>Buto is an enterprise online video platform</a></p>
+                <h1>Buto Lightbox Video Embed Demo</h1>
+                <p><a href='http://get.buto.tv' title="Buto is an enterprise online video platform">Buto is an enterprise online video platform</a></p>
                 <p class='my-title'>Brian's Buto</p>
                 <div class='buto-lightbox-here-please' data-id='12345'><!-- video here --></div>
                 <p>The Buto lightbox embed plugin has been created and tested with jQuery 1.9x.  It will search the page for any elements (usually divs) that you specify which have a buto video_id.  It will then talk to the Buto API and get the poster frames for that video.  When you click on the poster frame you'll get a lightbox (courtesy of <a href="https://github.com/jackmoore/colorbox/">jackmoore</a>) with the video in in.</p>
@@ -42,15 +42,15 @@ Demo for Buto lightbox js which is a lightbox based integration of the buto plat
                 <p>Ensure you have jquery 1.9x loaded first, it should work fine with earlier versions but is untested as such</p>
                 <script src="https://gist.github.com/ButoVideo/5194682.js"></script>
                 <h2>Examples</h2>
-                <p class='my-title'>Akaal in Wolverhampton</p>
+                <p class='my-title'>Akaal in Wolverhampton (Wl9Pr)</p>
                 <div class='buto-lightbox-here-please' data-id='Wl9Pr'><!-- video here --></div>
-                <p class='my-title'>Nihaal near a beach</p>
+                <p class='my-title'>Nihaal near a beach (C6YP8)</p>
                 <div class='buto-lightbox-here-please' data-id='C6YP8'><!-- video here --></div>
-                <p class='my-title'>Stalking cats</p>
+                <p class='my-title'>Stalking cats (mmV6l)</p>
                 <div class='buto-lightbox-here-please' data-id='mmV6l'><!-- video here --></div>
-                <p class='my-title'>Akaal on a beach</p>
+                <p class='my-title'>Akaal on a beach (HzLmM)</p>
                 <div class='buto-lightbox-here-please' data-id='HzLmM'><!-- video here --></div>
-                <p class='my-title'>I am a horse, feed me</p>
+                <p class='my-title'>I am a horse, feed me (2pgGq)</p>
                 <div class='buto-lightbox-here-please' data-id='2pgGq'><!-- video here --></div>
                 <br/>                
             </div>
@@ -68,5 +68,10 @@ Demo for Buto lightbox js which is a lightbox based integration of the buto plat
                 $('div.buto-lightbox-here-please').butoLightbox();
             });
         </script>
+        <footer>
+            <div class="center">
+                <a href="http://get.buto.tv/">Buto </a> | <a href="https://github.com/ButoVideo">Github</a> | <a href="http://opensource.org/licenses/MIT">License</a>
+            <div>
+        </footer>
     </body>
 </html>
