improving demo page

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ Demo for Buto lightbox js which is a lightbox based integration of the buto plat
                 <p><a href='http://get.buto.tv' title="Buto is an enterprise online video platform">Buto is an enterprise online video platform</a></p>
                 <p class='my-title'>Brian's Buto</p>
                 <div class='buto-lightbox-here-please' data-id='12345'><!-- video here --></div>
-                <p>The Buto lightbox embed plugin has been created and tested with jQuery 1.9x.  It will search the page for any elements (usually divs) that you specify which have a buto video_id.  It will then talk to the Buto API and get the poster frames for that video.  When you click on the poster frame you'll get a lightbox (courtesy of <a href="https://github.com/jackmoore/colorbox/">jackmoore</a>) with the video in in.</p>
+                <p>The Buto lightbox embed plugin has been created and tested with jQuery 1.9x.  It will search the page for any elements (usually divs) that you specify which have a Buto video id (eg 12345) .  It will then talk to the Buto API and get the poster frames for that video.  When you click on the poster frame you'll get a lightbox (courtesy of <a href="https://github.com/jackmoore/colorbox/">jackmoore</a>) with the video in in.</p>
                 
                 <h2>Usage</h2>
                 <p>Ensure you have jquery 1.9x loaded first, it should work fine with earlier versions but is untested as such</p>
@@ -70,7 +70,7 @@ Demo for Buto lightbox js which is a lightbox based integration of the buto plat
         </script>
         <footer>
             <div class="center">
-                <a href="http://get.buto.tv/">Buto </a> | <a href="https://github.com/ButoVideo">Github</a> | <a href="http://opensource.org/licenses/MIT">License</a>
+                <a href="http://get.buto.tv/">Buto</a> | <a href="https://github.com/ButoVideo">Github</a> | <a href="http://opensource.org/licenses/MIT">License</a>
             <div>
         </footer>
     </body>
