added reference to jquery 1.7.2

--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@ Demo for Buto lightbox js which is a lightbox based integration of the buto plat
 				<p><a href='https://github.com/ButoVideo/buto-lightbox'>https://github.com/ButoVideo/buto-lightbox</a></p>
                 <p class='my-title'>Brian's Buto</p>
                 <div class='buto-lightbox-here-please' data-id='12345'><!-- video here --></div>
-                <p>The Buto lightbox embed plugin has been created and tested with jQuery 1.9x.  It will search the page for any elements (usually divs) that you specify which have a Buto video id (eg 12345) .  It will then talk to the Buto API and get the poster frames for that video.  When you click on the poster frame you'll get a lightbox (courtesy of <a href="https://github.com/jackmoore/colorbox/">jackmoore</a>) with the video in in.
+                <p>The Buto lightbox embed plugin has been created and tested with jQuery 1.7.2 to 1.9.1.  It will search the page for any elements (usually divs) that you specify which have a Buto video id (eg 12345) .  It will then talk to the Buto API and get the poster frames for that video.  When you click on the poster frame you'll get a lightbox (courtesy of <a href="https://github.com/jackmoore/colorbox/">jackmoore</a>) with the video in in.
 				 The script will detect the size of the div and resize the poster frame accordingly.</p>
                 <p>It's lightweight and fast, designed to be async and not block DOM render (in a much as is possible)</p>
                 
                 <h2>Usage</h2>
-                <p>Ensure you have jquery 1.9x loaded first, it should work fine with earlier versions but is untested as such</p>
+                <p>Ensure you have jquery 1.7x or above loaded first, it may work fine with earlier versions but is untested as such</p>
                 <script src="https://gist.github.com/ButoVideo/5194682.js"></script>
                 <h2>Examples</h2>
                 <p class='my-title'>Akaal in Wolverhampton (Wl9Pr)</p>
