--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ Demo for Buto lightbox js which is a lightbox based integration of the buto plat
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script> <!-- make sure you have jquery loaded before you load the buto plugin-->
 
         <!-- required -->
-        <script src="//raw.githack.com//ButoVideo/buto-lightbox/master/dist/buto-lightbox.min.js" ></script>
+        <script src="//cdn.rawgit.com/ButoVideo/buto-lightbox/master/dist/buto-lightbox.min.js?v1" ></script>
         <!-- required -->
 
         <script>
